# radix

./: 404.html  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
.obsidian/: workspace.json
cardo_themed_app/src/pages/: combobox.rs
cardo_themed_app/src/theme/: accordion.rs  calendar.rs  combobox.rs
notes/: leptos-roving-focus.md  leptos-tooltip.md
reference_app/: notes.md  pnpm-lock.yaml
reference_app/cypress/e2e/: navigation-menu.cy.js  select.cy.js
reference_app/leptos/: Cargo.toml  index.html
reference_app/leptos/src/: app.rs  pages.rs
reference_app/react/: package.json
reference_app/react/src/: App.jsx
reference_app/react/src/pages/: Select.jsx
reference_app/shared/: select.css
src/: app.rs  layout.rs  main.rs
src/components/: demo.rs  mod.rs
src/pages/: getting_started.rs  home.rs  mod.rs
src/pages/components/: accessible_icon.rs  accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  calendar.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  form.rs  hover_card.rs  label.rs  menu.rs  menubar.rs  mod.rs  navigation_menu.rs  one_time_password_field.rs  overview.rs  password_toggle_field.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switch.rs  tabs.rs  time_field.rs  toast.rs  toggle.rs  toggle_group.rs  toolbar.rs  tooltip.rs
stories/leptos/: Cargo.toml
stories/leptos/src/: app.rs  primitives.rs
stories/leptos/style/: bundle.css
style/: input.css  output.css
(+103 files in other folders)
