[package]
name = "pith-ui-site"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.0", features = ["csr"] }
leptos_router = "0.8.0"
log = "0.4.22"
pith-ui = { git = "https://github.com/pith-ui/pith-ui.git", branch = "main", features = ["all"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.72", features = ["KeyboardEvent"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
